# testflying-api

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  design-qa.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
admin-web/: index.html  package-lock.json  package.json  vite.config.ts
admin-web/src/: main.tsx
alembic/: env.py
alembic/versions/: 20260616_0001_initial_catalog.py  20260618_0002_store_sync.py  20260618_0003_admin_account_metadata.py  20260618_0004_connector_constraints.py  20260618_0005_store_image_drafts.py  20260618_0006_store_metadata_content_sets.py  20260622_0007_store_image_suites.py  20260624_0008_app_level_store_metadata.py  20260702_0009_llm_profiles.py  20260709_0003_build_platform.py  20260710_0010_build_assignment_lease.py  20260710_0011_webhook_deliveries.py  20260713_0012_system_settings.py  20260714_0013_single_app_build_setting.py  20260714_0014_remove_repo_subpath.py
build-runner/: go.mod
build-runner/packaging/: install.command  postinstall
connector/: .dockerignore  Dockerfile  README.md  go.mod  pyproject.toml
connector/cmd/testflying-connector/: main.go
connector/internal/connector/: agent.go  config.go  config_test.go  credentials.go  models.go  ratelimit.go  server.go  server_test.go  store.go
connector/src/testflying_connector/: config.py  main.py  models.py  rate_limit.py
connector/tests/: test_connector.py
docker/: start-api.sh
docs/: api-contract.md  build-delivery.md  client-integration.md  store-management-api.md  store-sync.md
package-agent/: pyproject.toml
package-agent/src/package_agent/: __init__.py  __main__.py  cli.py  llm_discovery.py  llm_planner.py  models.py  policy.py  redaction.py
package-agent/tests/: test_cli.py  test_llm_discovery.py  test_llm_planner.py  test_policy.py  test_redaction.py
scripts/: build_runner_installer.sh  capture_admin_ui_pages.mjs  verify_admin_store_metadata_ui.py  verify_real_build.sh
src/testflying_api/: __init__.py  active_connector.py  admin_legacy_redirects.py  admin_spa.py  app.py  app_logs.py  build_notifications.py  (+27 more)
tests/: conftest.py  fixtures.py  test_accounts.py  test_active_connector.py  test_admin.py  test_admin_api.py  test_admin_api_app_logs.py  test_admin_api_build_apps.py  test_admin_api_developer_accounts.py  test_admin_api_llm_config.py  test_admin_api_marketing_pages.py  test_admin_api_pages.py  test_admin_api_reviews.py  test_admin_api_settings.py  test_admin_api_store_apps.py  test_admin_api_store_workspace.py  test_admin_api_uploads.py  test_admin_spa.py  test_app_logs.py  test_build_notifications.py  test_build_platform_api.py  test_build_platform_e2e.py  test_build_platform_schema.py  test_build_runner_api.py  test_build_runner_installer.py  test_catalog_service.py  test_config.py  test_cors.py  test_devices.py  test_dingtalk.py  test_docker_runtime.py  test_errors.py  test_feedback_classification_api.py  test_health.py  test_manifest.py  test_notifications.py  test_package_parser.py  test_real_build_acceptance.py  test_remove_repo_subpath_migration.py  test_runner_releases.py  (+12 more)
(+112 files in other folders)
