[project]
name = "testflying-package-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
package-agent = "package_agent.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8,<9", "ruff>=0.8,<1"]

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
